# kicad-ipc-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: LIBRARY_ASSESSMENT_REPORT.md  SELECTION_LOSSINESS_PLAN.md  TEST_CLI.md
docs/book/src/: examples.md  intro.md  quickstart.md  validation.md
examples/: board_inspector.rs  hello_kicad.rs
src/: blocking.rs  client.rs  kicad_api_version.rs  lib.rs
src/client/: board.rs  common.rs  decode.rs  document.rs  format.rs  geometry.rs  items.rs  mappers.rs  mod.rs  selection.rs  tests.rs
src/model/: item.rs  mod.rs
src/proto/: mod.rs
test-scripts/: kicad-ipc-cli.rs
