[package]
name = "kicad-ipc-rs"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Rust client library for the KiCad IPC API (async-first)"
repository = "https://github.com/Milind220/kicad-ipc-rs"
homepage = "https://github.com/Milind220/kicad-ipc-rs"
readme = "README.md"
keywords = ["kicad", "eda", "pcb", "ipc"]
categories = ["api-bindings", "asynchronous"]
include = [
    "/src/**",
    "/test-scripts/kicad-ipc-cli.rs",
    "/docs/TEST_CLI.md",
    "/README.md",
    "/LICENSE",
    "/Cargo.toml",
]

[features]
default = ["async"]
async = ["dep:nng", "dep:prost", "dep:prost-types", "dep:tokio"]
blocking = ["async"]
tracing = ["dep:tracing"]

[[bin]]
name = "kicad-ipc-cli"
path = "test-scripts/kicad-ipc-cli.rs"
required-features = ["blocking"]

[dependencies]
nng = { version = "1.0.1", optional = true }
prost = { version = "0.14.3", optional = true }
prost-types = { version = "0.14.1", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["sync", "time", "rt", "macros"], optional = true }
tracing = { version = "0.1.41", optional = true }
